Configure LWJGL SDL3 and Java 25 compatibility